<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://shema.android.com/apk/res-auto"
    xmlns:app1="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/appColor"
    android:orientation="vertical"
    android:padding="40dp"

    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/loginText"

        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/baloo_bhaijaan"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="40sp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"

        android:layout_marginEnd="20dp"
        android:orientation="vertical">


        // username enter design

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_textfield_design"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>


        // password enter design


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_textfield_design"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app1:passwordToggleEnabled="true">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        // forgot password



        // login

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/baloo_paaji_2"
            android:text="@string/login_button">

        </Button>

        // signup

        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:backgroundTint="#CFB509"
            android:elevation="5dp"
            android:fontFamily="@font/baloo_paaji_2"
            android:text="@string/signup_button"
            android:textColor="@color/black">



        </Button>


    </LinearLayout>


</LinearLayout>
    
    
    